--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 dsf_hub_federation_ssh_key
 dsf_hub_federation_ssh_key.pub
+dsf_hub_ssh_key
+dsf_hub_ssh_key.pub
 **/.terraform/*
 *terraform.tfstate
 *terraform.tfstate.backup
